# Minecraft

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: README.txt
include/app/: GameSession.hpp  SaveManager.hpp  Util.hpp
include/app/menus/: BaseMenu.hpp  CraftingMenu.hpp  CreativeMenu.hpp  FurnaceMenu.hpp  HudDrawContext.hpp  MiniMapMenu.hpp  PauseMenu.hpp  RecipeMenu.hpp  TextInputMenu.hpp  UiMenuRenderer.hpp  WorldMapMenu.hpp  WorldSelectionMenu.hpp
include/app/util/: ShaderProgramUtils.hpp
include/core/: Logger.hpp  ThreadQueue.hpp  TickCounter.hpp
include/game/: AudioSystem.hpp  Camera.hpp  CraftingSystem.hpp  DebugMenu.hpp  GameRules.hpp  Inventory.hpp  ItemDropSystem.hpp  MapSystem.hpp  Player.hpp  PlayerController.hpp  Recipe.hpp  SmeltingSystem.hpp
include/gfx/: ChunkBorderRenderer.hpp  ChunkMesh.hpp  HudRenderer.hpp  Shader.hpp  SkyBodyRenderer.hpp  TextureAtlas.hpp
include/voxel/: Block.hpp  Chunk.hpp  ChunkIO.hpp  ChunkMesher.hpp  LightingSolver.hpp  Raycaster.hpp
include/world/: ChunkCoord.hpp  FurnaceState.hpp  World.hpp  WorldGen.hpp
scripts/: build.sh  generate_atlas.py
shaders/: chunk.frag  chunk.vert
src/: main.cpp
src/app/: GameSession.cpp  SaveManager.cpp
src/app/menus/: CraftingMenu.cpp  CreativeMenu.cpp  FurnaceMenu.cpp  MiniMapMenu.cpp  PauseMenu.cpp  RecipeMenu.cpp  TextInputMenu.cpp  UiMenuRenderer.cpp  WorldMapMenu.cpp  WorldSelectionMenu.cpp
src/core/: Logger.cpp
src/game/: AudioSystem.cpp  Camera.cpp  CraftingSystem.cpp  DebugMenu.cpp  GameRules.cpp  Inventory.cpp  ItemDropSystem.cpp  MapSystem.cpp  Player.cpp  PlayerController.cpp  Recipe.cpp  SmeltingSystem.cpp
src/gfx/: ChunkBorderRenderer.cpp  ChunkMesh.cpp  HudRenderer.cpp  HudRendererSections.cpp  Shader.cpp  SkyBodyRenderer.cpp  TextureAtlas.cpp
src/voxel/: Chunk.cpp  ChunkIO.cpp  ChunkMesher.cpp  LightingSolver.cpp  Raycaster.cpp
src/world/: World.cpp  WorldGen.cpp
tests/: test_chunk.cpp  test_raycast.cpp
